Second carousel slider added and responsiveness

--- a/Contatti.html
+++ b/Contatti.html
@@ -37,7 +37,7 @@
 						<a class="nav-link" href="Progetto.html">Progetto</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="Blog.html">Blog</a>
+						<a class="nav-link" href="Blog/Articoli.html">Blog</a>
 					</li>
 					<li class="nav-item active">
 						<a class="nav-link active" href="Contatti.html">Contatti</a>
@@ -99,22 +99,18 @@
 				<p>	 <i class="fa fa-home body-icons"></i>  Via Garibaldi 23, 20061 Carugate (MI)</p>
 				<!-- <i class="fa fa-clock  body-icons"> </i> -->
 				<hr>
-			 <div class="row">
-						<div class="col-md-6">
-								<div class="card-block">
-							<b> Lunedi - Venerdì: </b> <br>
-							 Mattino 09:00 - 12:00 <br>
-							Pomeriggio 14:00 - 19:00 <br>
-								</div>
-						</div>
+				<div class="row">
+						 <div class="col-md-6">
+							 <b> Lunedi - Venerdì: </b> <br>
+								Mattino 09:00 - 12:00 <br>
+							 Pomeriggio 14:00 - 19:00 <br>
+						 </div>
 
-						<div class="col-md-6">
-								<div class="card-block">
-								 <b> Sabato: </b> <br>
-								 Mattino 09:00 - 12:00
-								</div>
-						</div>
-			</div>
+						 <div class="col-md-6">
+									<b> Sabato: </b> <br>
+									Mattino 09:00 - 12:00
+						 </div>
+			 </div>
 			<hr>
 					<div id="googleMap" style="width:100%;height:400px;">	</div>
 		 </div>
