--- a/Home.html
+++ b/Home.html
@@ -40,7 +40,7 @@
 						<a class="nav-link" href="Progetto.html">Progetto</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="Blog.html">Blog</a>
+						<a class="nav-link" href="Blog/Articoli.html">Blog</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="Contatti.html">Contatti</a>
@@ -73,14 +73,14 @@
 			<img src="img/osteopatia.jpg"> <!------------>
 			<div class="carousel-caption carousel-pos-button-one">
 				<!-- <h1 class="display-2"> Some text </h1> -->
-					<a href="articles/article1.html" class="btn btn-primary"  style="width: 20%;" > Scopri di più </a>
+					<a href="Blog/Osteopatia.html" class="btn btn-primary"  style="width: 20%;" > Scopri di più </a>
 			</div>
 		</div>
 		<div class="carousel-item">
 			<img src="img/visita.jpg"> <!------------>
 			<div class="carousel-caption carousel-pos-button-two ">
 				<!-- <h1 class="display-2"> Some text </h1> -->
-				<a href="articles/article2.html" class="btn btn-primary"  style="width: 20%;" > Scopri di più </a>
+				<a href="Blog/Visita.html" class="btn btn-primary"  style="width: 20%;" > Scopri di più </a>
 			</div>
 		</div>
 	</div>
@@ -158,18 +158,14 @@
 							<hr>
 						 <div class="row">
 				          <div class="col-md-6">
-										  <div class="card-block">
 										<b> Lunedi - Venerdì: </b> <br>
 										 Mattino 09:00 - 12:00 <br>
 										Pomeriggio 14:00 - 19:00 <br>
-											</div>
 									</div>
 
 									<div class="col-md-6">
-											<div class="card-block">
 											 <b> Sabato: </b> <br>
 											 Mattino 09:00 - 12:00
-											</div>
 									</div>
 						</div>
 						<hr>
